trustfall_core/test_data/tests/parse_errors/duplicate_optional.parse-error.ron
Err(UnsupportedDuplicatedDirective("@optional", Pos(
  line: 6,
  column: 46,
)))
